# leonardo-python-sdk

./: .gitignore  LICENSE.md  Makefile  README.md  RELEASES.md  USAGE.md  files.gen  gen.yaml  pylintrc  pyproject.toml  setup.py
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: speakeasy_sdk_generation.yml
.speakeasy/: workflow.yaml
.speakeasy/temp/: registry_412b6e.json
docs/models/operations/: calculateproductionapiservicecost.md  canvasinitimageuploadoutput.md  createdataset200applicationjson.md  createdataset200applicationjsondatasets.md  createdatasetrequestbody.md  createdatasetresponse.md  createdatasetresponsebody.md  createelementrequestbody.md  createelementresponse.md  createelementresponsebody.md  creategeneration200applicationjson.md  creategeneration200applicationjsonsdgenerationoutput.md  creategenerationrequestbody.md  creategenerationresponse.md  creategenerationresponsebody.md  createlcmgenerationrequestbody.md  createlcmgenerationresponse.md  createlcmgenerationresponsebody.md  createmodel200applicationjson.md  createmodel200applicationjsonsdtrainingoutput.md  createmodelrequestbody.md  createmodelresponse.md  createmodelresponsebody.md  createmodelsdtrainingoutput.md  createmodelsdversions.md  createsvdmotiongenerationrequestbody.md  createsvdmotiongenerationresponse.md  createsvdmotiongenerationresponsebody.md  createtexturegenerationrequestbody.md  createtexturegenerationresponse.md  createtexturegenerationresponsebody.md  createuniversalupscalerjobrequestbody.md  createuniversalupscalerjobresponse.md  createuniversalupscalerjobresponsebody.md  createvariationnobg200applicationjson.md  createvariationnobg200applicationjsonsdupscalejoboutput.md  createvariationnobgrequestbody.md  createvariationnobgresponse.md  createvariationnobgresponsebody.md  createvariationunzoomrequestbody.md  (+305 more)
docs/models/shared/: canvasrequesttype.md  elementinput.md  (+18 more)
scripts/: prepare-readme.py
src/leonardo_ai_sdk/: _version.py  basesdk.py  dataset.py  elements.py  image.py  init_images.py  models_.py  motion.py  pricing_calculator.py  prompt.py  realtime_canvas.py  sdk.py  sdkconfiguration.py  texture.py  threed_model_assets.py  user.py  variation.py
src/leonardoaisdk/: basesdk.py  dataset.py  element.py  elements.py  generation.py  image.py  init_images.py  initimage.py  model.py  models_.py  motion.py  pricing_calculator.py  prompt.py  realtime_canvas.py  sdk.py  sdkconfiguration.py  texture.py  threed_model_assets.py  user.py  variation.py
(+158 files in other folders)
