[tool.poetry]
name = "Leonardo-Ai-SDK"
version = "6.3.2"
description = "Leonardo AI Python Client SDK"
authors = ["Leonardo-Ai",]
readme = "README-PYPI.md"
repository = "https://github.com/Leonardo-Interactive/leonardo-python-sdk.git"
packages = [
    { include = "leonardo_ai_sdk", from = "src" }
]
include = ["py.typed", "src/leonardo_ai_sdk/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/leonardo_ai_sdk/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
eval-type-backport = "^0.2.0"
httpx = "^0.28.1"
jsonpath-python = "^1.0.6"
pydantic = "~2.10.3"
python-dateutil = "^2.8.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.14.1"
pylint = "==3.2.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


